<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rospack</name>
  <version>2.4.1</version>
  <description>ROS Package Tool</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rospack</url>
  <url type="bugtracker">https://github.com/ros/rospack/issues</url>
  <url type="repository">https://github.com/ros/rospack</url>

  <author>Brian Gerkey</author>
  <author>Morgan Quigley</author>
  <author>Dirk Thomas</author>

  <buildtool_depend version_gte="0.5.68">ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>python_cmake_mode</build_depend>
  <build_depend>python</build_depend>
  <build_depend>tinyxml2</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>pkg-config</exec_depend>
  <exec_depend>python_cmake_module</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>python-catkin-pkg</exec_depend>
  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>tinyxml2</exec_depend>

  <test_depend>python-coverage</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
